Added controllers for Disease and Doctor classes and their respective list.html as well as cleaning up the look of each of the views in html.

--- a/src/main/resources/templates/patients/list.html
+++ b/src/main/resources/templates/patients/list.html
@@ -11,19 +11,19 @@
 <table>
     <tr>
         <th>ID</th>
-        <th>First Name</th>
-        <th>Last Name</th>
+        <th>&emsp;First Name</th>
+        <th>&emsp;Last Name</th>
         <th>Doctor 1</th>
         <th>Doctor 2</th>
         <th>Doctor 3</th>
         <th>Disease 1</th>
-        <th>Disease 2</th>
+        <th>&emsp;Disease 2</th>
     </tr>
     <!-- thymeleaf iterator will render this element for each book -->
     <tr th:each="patient : ${patients}">
         <td th:text="${patient.id}">123123</td>
-        <td th:text="${patient.firstName}">Steven</td>
-        <td th:text="${patient.lastName}">Sarasin</td>
+        <td th:text="|&emsp;${patient.firstName}|">Steven</td>
+        <td th:text="|&emsp;${patient.lastName}|">Sarasin</td>
         <td>
             <span th:if="${#sets.size(patient.doctors) &gt; 0}">
                 <span th:text="|&emsp;${patient.doctors[0].type} ${patient.doctors[0].firstName} ${patient.doctors[0].lastName}|"></span>
